tests from PassengerRepositoryTest improved